--- a/Views/PostClientPage.xaml
+++ b/Views/PostClientPage.xaml
@@ -193,8 +193,7 @@
                 </ineractivity:Interaction.Behaviors>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <uc:MailMessageControl Id="{Binding Uid}"
-                                               Subject="{Binding Subject}"
+                        <uc:MailMessageControl Subject="{Binding Subject}"
                                                Date="{Binding Date}"
                                                From="{Binding From}"
                                                FlagCommand="{Binding Source={StaticResource viewModel}, Path=ControlMessageViewModel.FlagMessageCommand}"
