Revert "Added swipes"
This reverts commit 47a9259ccfb09be9db899ceee64ab9966825f8c9.

--- a/Views/PostClientPage.xaml
+++ b/Views/PostClientPage.xaml
@@ -193,7 +193,8 @@
                 </ineractivity:Interaction.Behaviors>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <uc:MailMessageControl Subject="{Binding Subject}"
+                        <uc:MailMessageControl Id="{Binding Uid}"
+                                               Subject="{Binding Subject}"
                                                Date="{Binding Date}"
                                                From="{Binding From}"
                                                FlagCommand="{Binding Source={StaticResource viewModel}, Path=ControlMessageViewModel.FlagMessageCommand}"
