--- a/Views/PostClientPage.xaml
+++ b/Views/PostClientPage.xaml
@@ -46,7 +46,7 @@
                     </Grid.RowDefinitions>
                     <MenuBar Grid.Row="0"
                              Background="#cdb4db">
-                        <MenuBarItem Title="Account"
+                        <MenuBarItem x:Uid="MenuBarItemAccount"
                                      Margin="0,-10,0,0"
                                      VerticalAlignment="Center"
                                      HorizontalAlignment="Center" Width="192">
@@ -184,8 +184,7 @@
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="3*"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="6*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <StackPanel Grid.Column="0"
@@ -202,42 +201,38 @@
                             </ineractivity:Interaction.Behaviors>
                         </TextBox>
                     </StackPanel>
-                    <Button Grid.Column="1"
-                            x:Uid="ButtonSync"
-                            Command="{Binding LoadMessagesViewModel.LoadMessagesFromServerCommand}"
-                            CommandParameter="{Binding ElementName=StoryboardLoading}"
-                            Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}">
-                        <RelativePanel>
-                            <SymbolIcon Symbol="Refresh"
-                                            x:Name="refreshIcon"
-                                            HorizontalAlignment="Left"/>
-                            <TextBlock x:Uid="TextBlockSync"
-                                           RelativePanel.RightOf="refreshIcon"
-                                           Margin="10,2,0,0"/>
-                        </RelativePanel>
-                    </Button>
-                    <DropDownButton Grid.Column="2"
-                                    Foreground="Black"
-                                    x:Uid="DropDownButtonSort"
-                                    Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}"
-                                    HorizontalAlignment="Center">
-                        <DropDownButton.Flyout>
-                            <MenuFlyout Placement="Bottom">
-                                <MenuFlyoutItem x:Uid="MenuFlyoutItemA-Z"
-                                                Command="{Binding LoadMessagesViewModel.SortMessagesCommand}"
-                                                CommandParameter="a-z"/>
-                                <MenuFlyoutItem x:Uid="MenuFlyoutItemZ-A"
-                                                Command="{Binding LoadMessagesViewModel.SortMessagesCommand}"
-                                                CommandParameter="z-a"/>
-                                <MenuFlyoutItem x:Uid="MenuFlyoutItemNewer"
-                                                Command="{Binding LoadMessagesViewModel.SortMessagesCommand}"
-                                                CommandParameter="newer"/>
-                                <MenuFlyoutItem x:Uid="MenuFlyoutItemOlder"
-                                                Command="{Binding LoadMessagesViewModel.SortMessagesCommand}"
-                                                CommandParameter="older"/>
-                            </MenuFlyout>
-                        </DropDownButton.Flyout>
-                    </DropDownButton>
+                    <StackPanel Grid.Column="1">
+                        <AppBarButton Icon="Refresh"
+                                  x:Uid="AppBarButtonSync"
+                                  Command="{Binding LoadMessagesViewModel.LoadMessagesFromServerCommand}"
+                                  CommandParameter="{Binding ElementName=StoryboardLoading}"
+                                  Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}"
+                                  HorizontalAlignment="Center"
+                                  VerticalAlignment="Center">
+                        </AppBarButton>
+                        <DropDownButton Foreground="Black"
+                                        x:Uid="DropDownButtonSort"
+                                        Visibility="{Binding LoginViewModel.ManagmentButtonsVisibility}"
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center">
+                            <DropDownButton.Flyout>
+                                <MenuFlyout Placement="Bottom">
+                                    <MenuFlyoutItem x:Uid="MenuFlyoutItemA-Z"
+                                                    Command="{Binding LoadMessagesViewModel.SortMessagesCommand}"
+                                                    CommandParameter="a-z"/>
+                                    <MenuFlyoutItem x:Uid="MenuFlyoutItemZ-A"
+                                                    Command="{Binding LoadMessagesViewModel.SortMessagesCommand}"
+                                                    CommandParameter="z-a"/>
+                                    <MenuFlyoutItem x:Uid="MenuFlyoutItemNewer"
+                                                    Command="{Binding LoadMessagesViewModel.SortMessagesCommand}"
+                                                    CommandParameter="newer"/>
+                                    <MenuFlyoutItem x:Uid="MenuFlyoutItemOlder"
+                                                    Command="{Binding LoadMessagesViewModel.SortMessagesCommand}"
+                                                    CommandParameter="older"/>
+                                </MenuFlyout>
+                            </DropDownButton.Flyout>
+                        </DropDownButton>
+                    </StackPanel>
                 </Grid>
                 <ListView x:Name="listViewMessages" 
                           CanDragItems="True"
@@ -296,24 +291,19 @@
             </Grid.RowDefinitions>
             <Grid Grid.Row="0"
                   Background="#cdb4db">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Button x:Uid="ButtonFlag"
-                        Grid.Column="0"
-                        Command="{Binding ControlMessageViewModel.FlagMessageCommand}"
-                        Visibility="{Binding ControlMessageViewModel.MessageViewConrtolVisibility}"/>
-                <Button x:Uid="ButtonDelete"
-                        Grid.Column="1"
-                        Command="{Binding ControlMessageViewModel.DeleteMessageCommand}"
-                        Visibility="{Binding ControlMessageViewModel.MessageViewConrtolVisibility}"/>
-                <Button Content="X"
-                        Grid.Column="2"
-                        Background="red"
-                        Command="{Binding ControlMessageViewModel.CloseMessageCommand}"
-                        Visibility="{Binding ControlMessageViewModel.MessageViewConrtolVisibility}"/>
+                <CommandBar Visibility="{Binding ControlMessageViewModel.MessageViewConrtolVisibility}">
+                    <CommandBar.PrimaryCommands>
+                        <AppBarButton Icon="Flag" 
+                                      x:Uid="AppBarButtonFlag"
+                                      Command="{Binding ControlMessageViewModel.FlagMessageCommand}"/>
+                        <AppBarButton Icon="Delete" 
+                                      x:Uid="AppBarButtonDelete"
+                                      Command="{Binding ControlMessageViewModel.DeleteMessageCommand}"/>
+                        <AppBarSeparator/>
+                        <AppBarButton Icon="Cancel" 
+                                      Command="{Binding ControlMessageViewModel.CloseMessageCommand}"/>
+                    </CommandBar.PrimaryCommands>
+                </CommandBar>
             </Grid>
             <uc:MessageBodyControl MessageBody="{Binding ControlMessageViewModel.StableMailMessage.Body}"
                                    Attachments="{Binding ControlMessageViewModel.StableMailMessage.Attachments}"
@@ -357,15 +347,18 @@
                         <Grid Grid.Row="1"
                               Grid.Column="1">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="3*"/>
+                                <ColumnDefinition Width="8*"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <TextBox Margin="5,0,5,0"
                                      Grid.Column="0"
                                      Text="{Binding SendMessageViewModel.MessageReciever, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                            <Button Grid.Column="1"
-                                    x:Uid="ButtonContact"
-                                    Command="{Binding SendMessageViewModel.ChooseContactCommand}"/>
+                            <AppBarButton Icon="Contact"
+                                          x:Uid="AppBarButtonContact"
+                                          Grid.Column="1"
+                                          HorizontalAlignment="Center"
+                                          VerticalAlignment="Center"
+                                          Command="{Binding SendMessageViewModel.ChooseContactCommand}"/>
                         </Grid>
                     </Grid>
                     <Grid Grid.Row="1">
@@ -397,14 +390,15 @@
                     </Grid.RowDefinitions>
                     <Grid Grid.Row="0">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="2*"/>
                             <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="8*"/>
+                            <ColumnDefinition Width="2*"/>
                         </Grid.ColumnDefinitions>
-                        <Button x:Uid="ButtonInsert"
-                                Grid.Column="0"
-                                Command="{Binding SendMessageViewModel.InsertFileCommand}"
-                                CommandParameter="{Binding ElementName=filesComboBox}"/>
+                        <AppBarButton Icon="Attach"
+                                      x:Uid="AppBarButtonInsert"
+                                      Grid.Column="0"
+                                      Command="{Binding SendMessageViewModel.InsertFileCommand}"
+                                      CommandParameter="{Binding ElementName=filesComboBox}"/>
                         <ComboBox x:Name="filesComboBox"
                                   Grid.Column="1"
                                   HorizontalAlignment="Stretch"
@@ -418,23 +412,29 @@
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-                            <Button Grid.Column="0"
-                                    Content="B"
-                                    FontWeight="Bold"
-                                    Command="{Binding SendMessageViewModel.StyleSelectedTextCommand}"
-                                    CommandParameter="b"/>
-                            <Button Grid.Column="1"
-                                    Content="I"
-                                    FontStyle="Italic"
-                                    Command="{Binding SendMessageViewModel.StyleSelectedTextCommand}"
-                                    CommandParameter="i"/>
-                            <Button Grid.Column="2"
-                                    Content="U"
-                                    Command="{Binding SendMessageViewModel.StyleSelectedTextCommand}"
-                                    CommandParameter="u"/>
-                            <Button Grid.Column="3"
-                                    Content="+"
-                                    Command="{Binding SendMessageViewModel.AddLineCommand}"/>
+                            <AppBarButton Grid.Column="0"
+                                          Icon="Bold"
+                                          HorizontalAlignment="Center"
+                                          VerticalAlignment="Center"
+                                          Command="{Binding SendMessageViewModel.StyleSelectedTextCommand}"
+                                          CommandParameter="b"/>
+                            <AppBarButton Grid.Column="1"
+                                          Icon="Italic"
+                                          HorizontalAlignment="Center"
+                                          VerticalAlignment="Center"
+                                          Command="{Binding SendMessageViewModel.StyleSelectedTextCommand}"
+                                          CommandParameter="i"/>
+                            <AppBarButton Grid.Column="2"
+                                          Icon="Underline"
+                                          HorizontalAlignment="Center"
+                                          VerticalAlignment="Center"
+                                          Command="{Binding SendMessageViewModel.StyleSelectedTextCommand}"
+                                          CommandParameter="u"/>
+                            <AppBarButton Grid.Column="3"
+                                          Icon="Add"
+                                          HorizontalAlignment="Center"
+                                          VerticalAlignment="Center"
+                                          Command="{Binding SendMessageViewModel.AddLineCommand}"/>
                         </Grid>
                     </Grid>
                     <TextBox Margin="5,0,5,0"
@@ -446,31 +446,24 @@
                              Text="{Binding SendMessageViewModel.MessageBody, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                     </TextBox>
                 </Grid>
-                <Grid Grid.Row="3">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Button x:Uid="ButtonCancel"
-                            Grid.Column="0"
-                            Margin="5"
-                            HorizontalAlignment="Left"
-                            Command="{Binding SendMessageViewModel.CancelSendingMessageCommand}"
-                            CommandParameter="{Binding ElementName=filesComboBox}"/>
-                    <Button x:Uid="ButtonDraft"
-                            Grid.Column="1"
-                            Margin="5"
-                            HorizontalAlignment="Center"
-                            Command="{Binding SendMessageViewModel.DraftMessageCommand}"
-                            CommandParameter="{Binding ElementName=filesComboBox}"/>
-                    <Button x:Uid="ButtonSend"
-                            Grid.Column="2"
-                            Margin="5"
+                <StackPanel Orientation="Horizontal"
                             HorizontalAlignment="Right"
-                            Command="{Binding SendMessageViewModel.SendMessageCommand}"
-                            CommandParameter="{Binding ElementName=filesComboBox}"/>
-                </Grid>
+                            Grid.Row="3">
+                    <AppBarButton Icon="Back"
+                                  x:Uid="AppBarButtonCancel"
+                                  Command="{Binding SendMessageViewModel.CancelSendingMessageCommand}"
+                                  CommandParameter="{Binding ElementName=filesComboBox}"/>
+                    <AppBarSeparator/>
+                    <AppBarButton Icon="Document"
+                                  x:Uid="AppBarButtonDraft"
+                                  Command="{Binding SendMessageViewModel.DraftMessageCommand}"
+                                  CommandParameter="{Binding ElementName=filesComboBox}"/>
+                    <AppBarSeparator/>
+                    <AppBarButton Icon="Send"
+                                  x:Uid="AppBarButtonSend"
+                                  Command="{Binding SendMessageViewModel.SendMessageCommand}"
+                                  CommandParameter="{Binding ElementName=filesComboBox}"/>
+                </StackPanel>
             </Grid>
         </Grid>
     </Grid>
